# telelologic-api

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
migrations/: env.py
migrations/versions/: 00362f094954_create_users_table.py
teleologic/: __init__.py  db.py  routes.py
tests/: conftest.py  test_routes.py
